# lua-rs

./: .emmyrc.json  .gitignore  BYTECODE_TEST_REPORT.md  CHANGELOG.md  Cargo.toml  LICENSE  OPTIMIZATION_REPORT.md  PERFORMANCE_REPORT.md  PERFORMANCE_SUMMARY.md  PERFORMANCE_VISUAL.md  README.md  REFACTOR_PLAN.md  compare_all_testes.ps1  compare_bytecode.ps1  lua_report  lua_rs_report  luac.out  measure_lua_peak_memory.ps1  need_optimize  optimize.md  run_all_tests.lua  run_benchmarks.ps1  run_benchmarks.sh  run_lua_benchmarks.ps1  run_lua_benchmarks.sh  run_lua_tests.ps1  run_miri.ps1  run_redirected_trace_audit.ps1  temp_while.lua  test.lua  test_eq.lua  test_func_call.lua  test_simple_while.lua  test_simple_while_bench.lua  test_while_lti.lua  test_while_simple.lua  verybig_official.luac  verybig_official.txt  verybig_ours.txt
crates/luars/: Cargo.toml  README.md
crates/luars-derive/: Cargo.toml  README.md
crates/luars-derive/src/: derive_userdata.rs  lib.rs  lua_methods.rs  type_utils.rs
crates/luars/examples/: size_check.rs
crates/luars/src/: gc.rs  lib.rs  lib_registry.rs  lua_async.rs  object_pool.rs  platform_time.rs
crates/luars/src/branch/: mod.rs
crates/luars/src/compiler/: assign.rs  binop.rs  binop_infix.rs  code.rs  exp2reg.rs  expdesc.rs  expr.rs  expr_parser.rs  expression.rs  func_state.rs  helpers.rs  mod.rs  parse_literal.rs  parse_lua_number.rs  statement.rs  stmt.rs  tagmethod.rs  tm_kind.rs  var.rs
crates/luars/src/compiler/parser/: error.rs  lexer.rs  lexer_config.rs  lua_language_level.rs  lua_operator_kind.rs  lua_token_data.rs  lua_token_kind.rs  lua_tokenize.rs  mod.rs  parser_config.rs  reader.rs  text_range.rs  tokenize_config.rs
crates/luars/src/ffi/: callback.rs  ctype.rs  mod.rs
crates/luars/src/gc/: gc_id.rs  gc_kind.rs  gc_object.rs  gc_v2.rs  mod.rs  object_allocator.rs  object_pool.rs  object_pool_v2.rs  paged_pool.rs  string_interner.rs  table_allocator.rs
crates/luars/src/jit/: analyzer.rs  compiler.rs  mod.rs  recorder.rs  runtime.rs  trace.rs  trace_compiler.rs
crates/luars/src/lua_api/: chunk.rs  function.rs  lua.rs  lua_state.rs  lua_string.rs  mod.rs  scope.rs  table.rs  test.rs  util.rs  value.rs
crates/luars/src/lua_pattern/: matcher.rs
crates/luars/src/lua_value/: alive_ref.rs  chunk_serializer.rs  lua_convert.rs  lua_string.rs  lua_table.rs  lua_thread.rs  lua_value.rs  lua_value_v2.rs  mod.rs  userdata.rs  userdata_builder.rs  userdata_trait.rs
crates/luars/src/lua_value/lua_table/: hash_table.rs  mod.rs  native_table.rs  type_array.rs  value_array.rs
crates/luars/src/lua_vm/: async_thread.rs  call_info.rs  const_string.rs  debug_info.rs  error_msg.rs  file_layout.rs  lua_call_frame.rs  lua_context.rs  lua_error.rs  lua_limits.rs  lua_ref.rs  lua_rng.rs  lua_state.rs  mod.rs  safe_option.rs  sandbox.rs  shared_proto.rs  stk_id.rs  string_arth.rs  table_builder.rs
crates/luars/src/lua_vm/dispatcher/: arithmetic_instructions.rs  control_instructions.rs  load_instructions.rs  loop_instructions.rs  mod.rs  table_instructions.rs  upvalue_instructions.rs
crates/luars/src/lua_vm/execute/: arith.rs  arithmetic_instructions.rs  call.rs  closure.rs  closure_handler.rs  closure_vararg_ops.rs  cold.rs  comparison_ops.rs  concat.rs  control_instructions.rs  execute_loop.rs  helper.rs  hook.rs  jit_execute_loop.rs  load_instructions.rs  loop_instructions.rs  metamethod.rs  mod.rs  noinline.rs  number.rs  return_handler.rs  table_instructions.rs  table_ops.rs  upvalue_instructions.rs  vararg.rs
crates/luars/src/lua_vm/jit/: artifact.rs  backend.rs  cranelift.rs  executors.rs  helper_plan.rs  hotcount.rs  ir.rs  lowering.rs  mod.rs  record.rs  recorder.rs  replay.rs  runtime.rs  state.rs  trace_recorder.rs
crates/luars/src/lua_vm/jit/backend/: compile.rs  compile_branches.rs  compile_iterators.rs  compile_loops.rs  compile_shared.rs  mod.rs  model.rs  native.rs  test.rs
crates/luars/src/lua_vm/jit/backend/compile/: mod.rs
crates/luars/src/lua_vm/jit/backend/native/: emit.rs  families.rs  mod.rs  profile.rs
crates/luars/src/lua_vm/jit/backend/test/: branches.rs  compile.rs  (+6 more)
crates/luars/src/lua_vm/opcode/: instruction.rs  mod.rs
crates/luars/src/serde/: deserializer.rs  mod.rs  serializer.rs
crates/luars/src/stdlib/: async_lib.rs  basic.rs  coroutine.rs  debug.rs  math.rs  mod.rs  os.rs  package.rs  string.rs  table.rs  utf8.rs
crates/luars/src/stdlib/basic/: mod.rs  parse_number.rs  require.rs
crates/luars/src/stdlib/io/: file.rs  mod.rs  popen.rs
crates/luars/src/stdlib/sort_table/: mod.rs
crates/luars/src/stdlib/string/: mod.rs  pack.rs  string_format.rs
crates/luars/src/stdlib/string/pattern/: class.rs  engine.rs  matcher.rs  mod.rs  parser.rs
crates/luars/src/test/: mod.rs  test_advanced_calls.rs  test_api_proposals.rs  test_async.rs  test_basic.rs  test_c_functions.rs  test_closures.rs  test_control_flow.rs  test_coroutine.rs  test_functions.rs  test_gc_metamethods.rs  test_io.rs  test_math.rs  test_metamethods.rs  test_miri_smoke.rs  test_operators.rs  test_os.rs  test_package.rs  test_rclosure.rs  test_sandbox.rs  test_send.rs  test_string.rs  test_syntax.rs  test_table.rs  test_user_api.rs  test_userdata.rs  test_utf8.rs  test_xpcall_debug.rs
crates/luars/src/test/test_data/: sample.txt
crates/luars_debugger/: Cargo.toml  README.md
crates/luars_debugger/src/: emmy_core.rs  hook_state.rs  lib.rs  proto.rs  transporter.rs
crates/luars_debugger/src/debugger/: breakpoint.rs  eval.rs  hook.rs  mod.rs  variables.rs
crates/luars_doc/: Cargo.toml  README.md
crates/luars_doc/src/: emit.rs  main.rs  parser.rs
crates/luars_interpreter/: Cargo.toml
crates/luars_interpreter/src/: lib.rs
crates/luars_safe/: Cargo.toml  README.md
crates/luars_safe/src/: builder.rs  function.rs  lib.rs  lua.rs  table.rs  util.rs
crates/luars_wasm/: Cargo.toml  QUICKSTART.md  README.md  example1_basic.html  example2_calculator.html  example3_playground.html  example4_data.html  example_conversion.html  index.html
crates/luars_wasm/src/: conversion.rs  lib.rs
lua_src/lua-5.5.0/: CMakeLists.txt
(+213 files in other folders)
