[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.dependencies]
# local
luars = { path = "crates/luars", version = "0.18.1" }
luars-derive = { path = "crates/luars-derive", version = "0.9.0" }
luars_debugger = { path = "crates/luars_debugger", version = "0.18.0" }

wasm-bindgen = "0.2"
ahash = "0.8"
rand = "0.8"
chrono = "0.4"
itoa = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"