[package]
name = "luars-derive"
version = "0.6.0"
edition = "2024"
authors = ["CppCXY"]
description = "A procedural macro crate for luars, providing derive macros for Lua userdata types"
license = "MIT"
repository = "https://github.com/CppCXY/lua-rs"
readme = "README.md"
keywords = ["lua", "derive", "procedural-macro"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
