[package]
name = "luars"
version = "0.16.0"
edition = "2024"
authors = ["CppCXY"]
description = "A library for lua 5.5 runtime implementation in Rust"
license = "MIT"
repository = "https://github.com/CppCXY/lua-rs"
readme = "README.md"
keywords = ["lua", "runtime", "interpreter"]
categories = ["development-tools"]

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
jit = []
jit-cranelift = [
	"jit",
	"dep:cranelift-codegen",
	"dep:cranelift-frontend",
	"dep:cranelift-jit",
	"dep:cranelift-module",
	"dep:cranelift-native",
]

[dependencies]
# local
luars-derive.workspace = true

# external
ahash.workspace = true
chrono.workspace = true
itoa.workspace = true
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
cranelift-codegen = { version = "0.130", optional = true }
cranelift-frontend = { version = "0.130", optional = true }
cranelift-jit = { version = "0.130", optional = true }
cranelift-module = { version = "0.130", optional = true }
cranelift-native = { version = "0.130", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
