[package]
name = "luars"
version = "0.26.1"
edition = "2024"
authors = ["CppCXY"]
description = "A library for lua 5.5 runtime implementation in Rust"
license = "MIT"
repository = "https://github.com/CppCXY/lua-rs"
readme = "README.md"
keywords = ["lua", "runtime", "interpreter"]
categories = ["development-tools"]

[lib]
doctest = false

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
sandbox = []
shared-proto = []

# Opt-in: marks core VM types as `Send` + `Sync` via `unsafe impl`.
# SAFETY: the caller must ensure no concurrent access — the VM is
# still single-threaded internally (Rc, raw pointers, etc.). This
# flag exists purely to satisfy framework bounds (e.g. axum, tokio).
unsafe-send = []

[dependencies]
# local
luars-derive.workspace = true

# external
ahash.workspace = true
chrono.workspace = true
itoa.workspace = true
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
