[package]
name = "luars_debugger"
version = "0.18.0"
edition = "2024"
description = "Built-in debugger for luars, loaded via require('emmy_core')"
authors = ["CppCXY"]
license = "MIT"
repository = "https://github.com/CppCXY/lua-rs"
readme = "README.md"
keywords = ["lua", "debugger"]
categories = ["development-tools"]

[dependencies]
luars.workspace = true
serde.workspace = true
serde_json.workspace = true
