[package]
name = "luars_interpreter"
version = "0.1.0"
edition = "2024"

[features]
default = ["jit"]
serde = ["luars/serde"]
jit = ["luars/jit"]

[dependencies]
luars.workspace = true
luars_debugger.workspace = true

[[bin]]
name = "lua"
path = "src/bin/main.rs"

[[bin]]
name = "bytecode_dump"
path = "src/bin/bytecode_dump.rs"
