[package]
name = "luars_safe"
version = "0.1.0"
edition = "2024"
description = "Safe, embedding-oriented wrapper APIs built on top of luars"
license = "MIT"
repository = "https://github.com/CppCXY/lua-rs"
readme = "README.md"
keywords = ["lua", "runtime", "embedding"]
categories = ["development-tools"]

[features]
default = []
serde = ["luars/serde"]
sandbox = ["luars/sandbox"]

[dependencies]
luars.workspace = true
