[package]
name = "luars_wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for the luars Lua 5.5 runtime"
license = "MIT"
repository = "https://github.com/CppCXY/lua-rs"
readme = "README.md"
keywords = ["lua", "wasm", "webassembly", "browser", "interpreter"]
categories = ["wasm", "development-tools"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
luars = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
getrandom_0_3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
]